[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/PowerUps/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://Art/PowerUps/LaserBeam/LaserAim.png" type="Texture" id=2]
[ext_resource path="res://Art/PowerUps/LaserBeam/LaserBeam.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Audio/SfxPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/LaserBlastSFX.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 498.222, 36.9645 )

[node name="LaserBeam" type="Position2D"]

script = ExtResource( 1 )

[node name="VisualFeedback" type="Sprite" parent="." index="0"]

visible = false
modulate = Color( 1, 1, 1, 0.823216 )
position = Vector2( -0.00377321, 0.00889969 )
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )
offset = Vector2( -399.088, -0.0155356 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Beam" type="Area2D" parent="." index="1"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="LaserBeam" type="Sprite" parent="Beam" index="0"]

position = Vector2( 0.00588131, -0.00150919 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )
offset = Vector2( -165.841, -0.362297 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beam" index="1"]

position = Vector2( -493.399, 0 )
scale = Vector2( 0.966225, 1 )
shape = SubResource( 1 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="LaserBeamShrink" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TriggerTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="SfxPlayer" parent="." index="4" instance=ExtResource( 4 )]

stream = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
volume = 2


